chore(docs): fix wording and formatting

--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
@@ -37,7 +37,7 @@ Systeme realisieren das Verhalten von Anwendungsfällen, bei denen sich Akteure 
 \begin{tcolorbox}[title=Systemgrenzen,colback=red!20]
     Die absolute Aussage, dass die Systemgrenzen modelliert werden \textit{müssen}, ist so in der Spezifikation nicht zu finden:
 
-    \blockquote[{\cite[18.1.4 Notation, 641, HErvorhebung i.O.]{OMG17}}]{
+    \blockquote[{\cite[18.1.4 Notation, 641, Hervorhebung i.O.]{OMG17}}]{
         A subject for a set of UseCases (sometimes called a \textit{system boundary}) may be shown as a rectangle with its name in the
         top-left corner, with the UseCase ellipses visually located inside this rectangle
     }
@@ -120,7 +120,7 @@ Bei der Verwendung einer \code{extend}-Beziehung gilt (vgl.~\cite[53]{Buh09}):
 \begin{figure}
     \centering
     \includegraphics[scale=0.4]{part three/Anwendungsfalldiagramm/img/usecase-extend}
-    \caption{Notation der extend-Beziehung. in dem Beispiel wird die der Anwendungsfall \textbf{A} durch den Anwendungsfall \textbf{B} an dem \textit{extension point} \textbf{Point 1} erweitert, der aktiviert wird, falls die in der Notiz vermerkte Bedingung zutrifft (Quelle: in Anlehnung an \cite[65, Abb. 2.8-4]{Bal05})}
+    \caption{Notation der extend-Beziehung. in dem Beispiel wird die der Anwendungsfall \textbf{A} durch den Anwendungsfall \textbf{B} an dem \textit{extension point} \textbf{Point 1} erweitert, der aktiviert wird, falls die in der Notiz vermerkte Bedingung zutrifft (Quelle: in Anlehnung an \cite[65, Abb. 2.8-4]{Bal05}) (Die Notizverbindung ist auch im Original durchgezogen, sollte aber gestrichelt sein, s. \cite[``Figure 7.2 Comment notation``, 22]{OMG17})}
     \label{fig:usecase-extend}
 \end{figure}
 
