--- a/docs/repetitorium/part three/Sequenzdiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/begriffe und elemente.tex
@@ -21,7 +21,7 @@ Neben Operationsaufrufen können Nachrichten auch als Signalübermittlung auftre
 \end{itemize}
 
 \noindent
-Als Ausgangspunkt einer Nachricht kann eine sog. \textbf{found message} dienen. Eine \textit{found message} ist eine Nachricht, bei der dem Empfänger bekannt ist, die Angabe des Senders aber außerhalb der zu erstellenden Spezifikation liegt.\\
+Als Ausgangspunkt einer Nachricht kann eine sog. \textbf{found message} dienen. Eine \textit{found message} ist eine Nachricht, die den Empfänger kennt; allerdings liegt die Angabe des Senders außerhalb der zu erstellenden Spezifikation.\\
 Um einen Endpunkt zu modellieren, kann eine \textbf{lost message} verwendet werden - hierbei liegt der Empfänger außerhalb der Spezifikation  (vgl.~\cite[598]{OMG17}).\\
 Die Notation für beide ist in Abbildung~\ref{fig:lost-found-message} dargestellt.
 
