chore(docs): fix wording and formatting

--- a/docs/repetitorium/part four/Management des QS-Prozesses/fortschrittsverfolgung.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/fortschrittsverfolgung.tex
@@ -11,5 +11,5 @@ Handelt es sich dabei um Fehler sehr geringer Priorität, kann die Software aber
 \subsubsection*{Anzahl Testfälle}
 Eine weitere wichtige Kennzahl ist die \textbf{Anzahl der Testfälle} aufgeschlüsselt nach ihrem Bearbeitungsstand (\textit{offen}, \textit{in Bearbeitung}, \textit{abgeschlossen}).\\
 Diese Kennzahl lässt sich täglich aus den Testprotokollen ablesen.\\
-Stagniert diese Zahlen, ist das ein Hinweis auf Probleme im Test.\\
+Stagnieren diese Zahlen, ist das ein Hinweis auf Probleme im Test.\\
 Steigt hingegen die Anzahl der Tests mit dem Status ``\textit{in Arbeit}`` eher stark an, ohne, dass sich die Anzahl der \textit{abgeschlossenen} Tests verändert, ist das ein Hinweis daraus, dass die Qualität der Software so niedrig ist, dass kein Testfall abgeschlossen werden kann.
