--- a/docs/repetitorium/part four/Testende Verfahren/funktionsorientierte testverfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/funktionsorientierte testverfahren.tex
@@ -340,4 +340,4 @@ Die Aufgabe der Tester hierbei ist es, einen oder mehrere Pfade zufinden, die di
 
 \subsubsection*{Zustände}
 \textit{Wedemann} merkt an, das sich bei dieser Diskussion die Frage ergeben kann, ``was denn nun genau unter einem Zustand zu verstehen ist`` (\cite[48]{Wed09c}): Ist ein Zustand bereits durch jedes Attribut, das über \code{set()} verändert werden kann, gegeben? \textit{Wedemann} bejaht dies: ``[...] auch ein Attributwert [ist] als Zustand zu sehen und der Test ist vollständig, wenn ein gesetzter Wert auch verwendet wird.`` (\cite[48]{Wed09c}).
-Er fügt allerdings an, dass es für solch einfache Fälle nicht notwendig sei, den vorgestellten Formalismus zu verwenden, da dieser nur sinnvoll bei Kassen sei, bei denen ``es mehrere Zustände gibt, in denen sich die Methoden so unterschiedlich verhalten, dass dies mit Äquivalenzklassen nicht mehr abgebildet werden kann`` (\textit{ebenda}).
+Er fügt allerdings an, dass es für solch einfache Fälle nicht notwendig sei, den vorgestellten Formalismus zu verwenden, da dieser nur sinnvoll bei Klassen sei, bei denen ``es mehrere Zustände gibt, in denen sich die Methoden so unterschiedlich verhalten, dass dies mit Äquivalenzklassen nicht mehr abgebildet werden kann`` (\textit{ebenda}).
