--- a/docs/repetitorium/part four/Testende Verfahren/klassentest objektorientierter systeme.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/klassentest objektorientierter systeme.tex
@@ -50,7 +50,7 @@ Dieses Problem kann mitigiert werden, indem die Abhängigkeiten durch \textbf{Mo
 s. \textit{temporal coupling} in Abschnitt~\ref{subsec:zustandsbasierter-test}
 }, die die aufrufenden öffentlichen Methoden garantieren.
 Wird dies zusätzlich berücksichtigt, werden die Tests unnötig aufwändig.\\
-Des Weiteren bleiben die Testfälle stabiler, wenn nur die öffentliche Schnittstelle einer Klasse in einem test verwendet werden.\\
+Des Weiteren bleiben die Testfälle stabiler, wenn nur die öffentliche Schnittstelle einer Klasse in einem Test verwendet werden.\\
 Insgesamt kommt \textit{Wedemann} zu dem Schluss, dass Kapselung als Vorteil angesehen werden sollte, ``da dann im Test abgeschlossene, funktionsfähige Einheiten vorliegen`` (\cite[56]{Wed09c}).
 
 \subsection*{Vererbungshierarchien}
