chore(docs): fix wording and formatting

--- a/docs/repetitorium/part four/Qualität/qualität.tex
+++ b/docs/repetitorium/part four/Qualität/qualität.tex
@@ -80,7 +80,7 @@ Aufgrund der typischen schrittweisen Konkretisierung von Qualitätsforderungen s
         \begin{itemize}
             \item  \textbf{Qualitätsteilmerkmale} (bspw. ``\textit{Performance}``, ``\textit{Verbrauchsverhalten}``), die genau definiert werden durch
              \begin{itemize}
-                       \item \textbf{Qualitätsindikatoren}, die jeweils einem \textit{Artefakt} innewohnende Eigenschaften beschreibt, die objektiv bestimmt werden kann (bspw. ``\textit{Antwortzeit}``, ``\textit{Datendurchsatz}``)
+                       \item \textbf{Qualitätsindikatoren}, die jeweils einem \textit{Artefakt} innewohnende Eigenschaften beschreiben, die objektiv bestimmt werden kann (bspw. ``\textit{Antwortzeit}``, ``\textit{Datendurchsatz}``)
             \end{itemize}
         \end{itemize}
     \end{itemize}
