--- a/docs/repetitorium/part four/Testende Verfahren/funktionsorientierte testverfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/funktionsorientierte testverfahren.tex
@@ -15,7 +15,7 @@ Die Vielfältigkeit möglicher Eingabefolgen in Software übersteigt oft die Ums
 
 \begin{tcolorbox}[title=Äquivalenzklassen]
     \blockquote[{\cite[43]{Wed09c}}]{
-    Die unterschiedlichen Bereiche, in denen ein Testgegenstand gleichartig reagiert, werden Äquivalenzklassen genannt.
+    Die unterschiedlichen Bereiche, in denen ein Testgegenstand \textbf{gleichartig reagiert}, werden Äquivalenzklassen genannt.
     }\\
     \textbf{Gültige Äquivalenzklassen} stellen hierbei zulässige Elemente dar, die vom Testgegenstand verarbeitet werden sollen, \textbf{ungültige Äquivalenzklassen} hingegen Elemente, die vom Testgegenstand abgelehnt werden sollen.
 \end{tcolorbox}
