--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/zusammenfassung.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/zusammenfassung.tex
@@ -3,10 +3,10 @@
 \begin{itemize}
     \item Werkzeuge zur \textbf{statischen Analyse von Sourcecode} werden eingesetzt, um
     \begin{itemize}
-        \item die Einhaltung von \textbf{Programmierrichtlinien} zu überprüfen
+        \item die \textbf{Einhaltung von Programmierrichtlinien} zu überprüfen
         \item \textbf{typische Defekte} anhand vorgegebener Muster zu finden
-        \item Ablauffehler mit Hilfe der \textbf{Datenflussanomalieanalyse} und der \textbf{abstrakten Interpretation} zu erkennen
-        \item die Wartbarkeit mit Metriken zu beurteilen
+        \item \textbf{Ablauffehler} mithilfe der \textbf{Datenflussanomalieanalyse} und der \textbf{abstrakten Interpretation} zu erkennen
+        \item die \textbf{Wartbarkeit} mit \textbf{Metriken} zu beurteilen
     \end{itemize}
     \item In bestimmten Bereichen ist der Einsatz solcher Werkzeuge zum Industriestandard geworden, bspw. im Bereich Automotive
     \item mittels der werkzeuggestützten Analyse können Defekte entdeckt werden, aber eine Aussage über die \textbf{Lauffähigkeit} oder \textbf{Brauchbarkeit} kann nicht angegeben werden, da die \textbf{Funktionalität} \textit{nicht} analysiert wird
