--- a/docs/repetitorium/part one/Software und Software Engineering/einfuehrung.tex
+++ b/docs/repetitorium/part one/Software und Software Engineering/einfuehrung.tex
@@ -23,7 +23,7 @@ IV beruht dabei auf Normen, Standards und Regeln:
 
 \begin{itemize}
     \item\textbf{technische Ebene}: bspw. Vorlagen, wie Anforderungen an Software erfasst werden; Normen für Entwürfe von Software.
-    \item \textbf{methodische Ebene}: bspw. festgeschriebene Reihenfolge von Tätigkeiten und zu erstellende Produkte für die Entwicklungsarbeit; Kriterien für den Einsatz technischer oder organisatorische Maßnahmen
+    \item \textbf{methodische Ebene}: bspw. festgeschriebene Reihenfolge von Tätigkeiten und zu erstellende Produkte für die Entwicklungsarbeit; Kriterien für den Einsatz technischer oder organisatorischer Maßnahmen
 \end{itemize}\\
 
 \noindent
