chore(docs): update meta and minor rypo fixes

--- a/docs/repetitorium/part four/Testende Verfahren/testende verfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/testende verfahren.tex
@@ -19,7 +19,7 @@ Es muss zunächst geklärt werden, was mit \textbf{Vollständigkeit von Tests} g
 \textit{Wedemann} führt aus, dass die Vollständigkeit von Tests anhand von zwei Hauptkriterien beschrieben werden kann:
 
 \begin{itemize}
-    \item \textbf{Funktionsorientierter Test (Black-BoxTest)}: Ein Test kann als \textbf{vollständig} betrachtet werden, wenn die \textbf{gesamte Funktionalität} im Test erprobt worden ist.
+    \item \textbf{Funktionsorientierter Test (Black-Box-Test)}: Ein Test kann als \textbf{vollständig} betrachtet werden, wenn die \textbf{gesamte Funktionalität} im Test erprobt worden ist.
     \item[] Diese Art von Test wird als \textbf{funktionsorientierter} bzw. \textbf{Black-Box-Test} bezeichnet.
     \item[] Bei dieser Art von Tests ist es möglich, dass nicht alle Codeteile ausgeführt werden, weil sie
     \begin{itemize}
